deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  namespace: default
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: mohammedbilal98/webserver:latest
        ports:
        - containerPort: 4499
