service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
spec:
  type: LoadBalancer
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 443
      targetPort: 4499
