ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: WebServer_ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: https://wisecow.webserver.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow
            port:
              number: 443
